# dictgen2

./: .gitignore  Cargo.toml  example.py  pyproject.toml  readme.md
dev/: pyvenv.cfg
src/: dictgen.rs  lib.rs
src/dictgen/: generators.rs  random.rs  settings.rs
